spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_function_return_type.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test() -> _ {}


error: Return types cannot have wildcards in their type
  ┌─ testinput:1:14
  │
1 │ fn test() -> _ {}
  │              ^ Wildcard in return type
