spade-tests/src/snapshots/spade_tests__ast_lowering__wildcard_is_not_allowed_in_function_type.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn test(x: _) {}


error: Argument types cannot have wildcards in their type
  ┌─ testinput:1:12
  │
1 │ fn test(x: _) {}
  │            ^ Wildcard in argument type
